# soxForAndroid

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xueersiwx/lib/sox/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Log.h  Sox_effect.cpp  Sox_effect.h  native-lib.cpp  sox.h  sox_base_effect.cpp  sox_base_effect.h  sox_equalizer_effect.cpp  sox_equalizer_effect.h  sox_filter_equalizer_param.cpp  sox_filter_equalizer_param.h  sox_filter_reverb_param.cpp  sox_filter_reverb_param.h  sox_reverb_effect.cpp  sox_reverb_effect.h
app/src/main/java/com/xueersiwx/lib/sox/: MainActivity.java  SoxUtils.java  TestView.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xueersiwx/lib/sox/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
